Remove font-size of .color-picker--btn to stop the text from jumping up whenever it's hovered

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ ul > li {
 
 .color-picker--btn {
     padding: 4px 8px;
-    font-size: 12px;
+    /* font-size: 12px; */
     font-family: inherit;
     color: inherit;
     transition: all .2s;
